--- a/kmaps-app/src/main/RightSideBar.scss
+++ b/kmaps-app/src/main/RightSideBar.scss
@@ -169,7 +169,7 @@
 }
 .sui-advTerm > div {
     display: inline-block;
-    margin-right: 1.5rem;
+    margin-right: 1rem;
     margin-top: 0.75rem;
     font-weight: bold;
     white-space: nowrap;
